--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -92,7 +92,28 @@
             We have also created an
             enemy death sprite that appears when they are shot, allowing the game to feel a little realistic as they
             don't just disappear.
-    </div>
+        </div>
+        </p>
+
+        <h3 style="color:white">About Us - Group H</h3>
+
+        <p>
+        <div id="GroupContent" class="contentContent">
+            Within our group we have Darren Boyd (B00349291) & Kyle Gibson (B00366928).
+            When starting the development of our game, Darren (B00349291) started off by creating the background/map
+            tiles using 'Pixelorama' and imported them into 'Tiled' where they were made into tilesets and placed onto
+            the map. During this time Kyle (B00366928) created the player and enemy sprites using 'Aseprite', backed
+            them up into the 'Google Drive' after this we loaded everything into the game.<br></br>
+            Darren (B00349291) started working on the player movement and changed the controls from the arrow keys to
+            WASD which allowed us to start developing the mouse functionality which allowed the player to rotate and
+            shoot, we both helped get this working as there were some bugs with the shooting being a continuous stream
+            of bullets.<br> </br>
+            Kyle (B00366928) created the enemies within the level and gave them the ability to rotate and face the
+            player, as well as be destroyed on collision with the player's bullet and award the player 10 points per
+            kill. Darren (B00349291) helped improve upon the enemy death by replacing the sprite with the dead enemy
+            sprite, which helped give a little more realism to the game as they would previously disappear.
+
+        </div>
         </p>
     </div>
 
